finish left sidebar

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
 </head>
 <body>
+    <!--Start nav-->
     <nav>
         <div class="nav-left">
             <img src="images/logo.png" alt="logo" class="logo">
@@ -18,6 +19,49 @@
                 <li><img src="images/video.png"></li>
             </ul>
         </div>
+        <div class="nav-right">
+            <div class="search-box">
+                <img src="images/search.png">
+                <input type="text" placeholder="search ...">
+            </div>
+            <div class="nav-user-icone online">
+                <img src="images/profile-pic.png" ait="profile">
+            </div>
+        </div>
     </nav>
+    <!--End nav-->
+
+    <!--Start container -->
+    <div class="container">
+        <!--left-sidebar-->
+        <div class="left-sidebar">
+            <div class="emp-links">
+                <a href="#"><img src="images/news.png" alt="">Last News</a>
+                <a href="#"><img src="images/friends.png" alt="">Friends</a>
+                <a href="#"><img src="images/group.png" alt="">Groups</a>
+                <a href="#"><img src="images/marketplace.png" alt="">Marketplace</a>
+                <a href="#"><img src="images/watch.png" alt="">Watch</a>
+                <a href="#">See More</a>
+            </div>
+            <div class="shortcut-links">
+                <p>Your shortcuts</p>
+                <a href="#"><img src="images/shortcut-1.png" >Learn python</a>
+                <a href="#"><img src="images/shortcut-2.png" >Learn Java</a>
+                <a href="#"><img src="images/shortcut-3.png" >Learn php</a>
+                <a href="#"><img src="images/shortcut-4.png" >Learn js</a>
+            </div>
+
+        </div>
+        <!--main-containt-->
+        <div class="main-content"></div>
+        <!--right-sidebar-->
+        <div class="right-sidebar">
+            <div class="sidebar-title">
+                <h4>Events</h4>
+                <a href="#">See More</a>
+            </div>
+        </div>
+    </div>
+    <!--End container-->
 </body>
 </html> 
