--- a/index.html
+++ b/index.html
@@ -60,6 +60,67 @@
                 <h4>Events</h4>
                 <a href="#">See More</a>
             </div>
+            <div class="event">
+                <div class="left-even">
+                    <h3>20</h3>
+                    <span>March</span>
+                </div>
+                <div class="right-even">
+                    <h4>Birthday</h4>
+                    <p>Naglaa Fouz , France</p>
+                    <a href="#">More info</a>
+                </div>
+            </div>
+            <div class="event">
+                <div class="left-even">
+                    <h3>10</h3>
+                    <span>April</span>
+                </div>
+                <div class="right-even">
+                    <h4>Birthday</h4>
+                    <p>Minna Fouz , Egypte</p>
+                    <a href="#">More info</a>
+                </div>
+            </div>
+            <div class="sidebar-title">
+                <h4>Advertisement</h4>
+                <a href="#">See More</a>
+            </div>
+            <img src="images/advertisement.png" class="sidebar-ads">
+            <div class="sidebar-title">
+                <h4>conversation</h4>
+                <a href="#">Hide</a>
+            </div>
+            <div class="online-list">
+                <div class="online">
+                    <img src="images/member-1.png" alt="">
+                </div>
+                <p>Ali Bermin</p>
+            </div>
+            <div class="online-list">
+                <div class="online">
+                    <img src="images/member-2.png" alt="">
+                </div>
+                <p>Sami Bermin</p>
+            </div>
+            <div class="online-list">
+                <div class="online">
+                    <img src="images/member-3.png" alt="">
+                </div>
+                <p>mohammed Bermin</p>
+            </div>
+            <div class="online-list">
+                <div class="online">
+                    <img src="images/member-4.png" alt="">
+                </div>
+                <p>houssam Bermin</p>
+            </div>
+            <div class="online-list">
+                <div class="online">
+                    <img src="images/member-5.png" alt="">
+                </div>
+                <p>ahmed Bermin</p>
+            </div>
         </div>
     </div>
     <!--End container-->
