start main section to user profile

--- a/index.html
+++ b/index.html
@@ -53,7 +53,39 @@
 
         </div>
         <!--main-containt-->
-        <div class="main-content"></div>
+        <div class="main-content">
+            <div class="story-gallary">
+                <div class="story s1">
+                    <img src="images/upload.png" >
+                    <p>Post Story</p> 
+                </div>
+                <div class="story s2">
+                    <img src="images/member-1.png" >
+                    <p>Ali Bermin</p>
+                </div>
+                <div class="story s3">
+                    <img src="images/member-2.png" >
+                    <p>Sami bermin</p>
+                </div>
+                <div class="story s4">
+                    <img src="images/member-3.png" >
+                    <p>mohammed Bermin</p>
+                </div>
+                <div class="story s5">
+                    <img src="images/member-4.png" >
+                    <p>houssam Bermin</p>
+                </div>
+            </div>
+            <div class="write-post">
+                <div class="user-profile">
+                    <img src="images/profile-pic.png" alt="">
+                    <div>
+                        <p>Rony Sami</p>
+                        <small>Public</small>
+                    </div>
+                </div>
+            </div>
+        </div>
         <!--right-sidebar-->
         <div class="right-sidebar">
             <div class="sidebar-title">
